fixed overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ body {
     top:0;
     width:50%;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 @media screen and (max-width: 1000px) {
     .leftInfo{
